--- a/style.css
+++ b/style.css
@@ -1,109 +1,130 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
-    box-sizing: border-box;
-    margin:5px;
-    margin-top: 0;
-    box-align: center;
-    font-family:"Poppins",sans-serif;
-    padding:5px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-.wrapper{
-    margin: 120px auto;
-    max-width: 400px;
-    border: radius 6px;
-    width: 100%;
-    padding: 30px;
-    background-color: rgb(175, 88, 255);
-    border-radius: 10px;
-    box-shadow:cyan;
-    box-decoration-break: slice;
+::selection{
+  color: #ffff;
+  background: rgb(142, 73, 232);
 }
 body{
- background: linear-gradient(to bottom, #4c8b8b 0%, #5aa1a3 100%); 
- height: 100vh;
- padding: 10px;
- width: 100%;
-
+  width: 100%;
+  height: 100vh;
+  /* overflow: hidden; */
+  padding: 10px;
+  background: linear-gradient(to bottom, #68EACC 0%, #497BE8 100%);
+}
+.wrapper{
+  background: #fff;
+  max-width: 400px;
+  width: 100%;
+  margin: 120px auto;
+  padding: 25px;
+  border-radius: 5px;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
 }
 .wrapper header{
-font-size: 28px;
-font-weight: 800;
-color:rgb(127, 214, 195);
-text-align: center;
-
+  font-size: 30px;
+  font-weight: 600;
 }
-.wrapper .inputfield{
-    display: flex;
-    height: 50px;
-    width: 100%;
-    
+.wrapper .inputField{
+  margin: 20px 0;
+  width: 100%;
+  display: flex;
+  height: 45px;
 }
-.inputfield input{
-    width:600px;
-    height: 100%;
-    border: 5px solid #ccc;
-    font-size: 15px;
-    border-radius: 2px;
-    padding-left: 10px;
+.inputField input{
+  width: 85%;
+  height: 100%;
+  outline: none;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+  font-size: 17px;
+  padding-left: 15px;
+  transition: all 0.3s ease;
 }
-.inputfield button{
-    width: 180px;
-    height: 100%;
-    border:none;
-    background-color:rgb(36, 78, 194);
-    color:whitesmoke;
-    font-weight:600;
-    font-size: 25px;
-    outline: none;
-    border-radius: 10px;
-    cursor: pointer;
+.inputField input:focus{
+  border-color: #8E49E8;
 }
-.wrapper .taskList{
-    max-height: 250px;
-    overflow-y:auto  ;
-
+.inputField button{
+  width: 50px;
+  height: 100%;
+  border: none;
+  color: #fff;
+  margin-left: 5px;
+  font-size: 21px;
+  outline: none;
+  background: #8E49E8;
+  cursor: pointer;
+  border-radius: 3px;
+  opacity: 0.6;
+  pointer-events: none;
+  transition: all 0.3s ease;
 }
-.taskList li{
-    list-style: none;
-    height: 45px;
-    position: relative;
-    background: #f8f4f4b0; 
-    margin-bottom: 8px;
-    padding: 0 15px;
-    overflow: hidden;
-     
+.inputField button:hover,
+.footer button:hover{
+  background: #721ce3;
 }
-.taskList li span{
-    position: absolute;
-    right: -70px;
-    color:#fff;
-    cursor: pointer;
-    border-radius: 0,3px 3px,0;
-    text-align: center;
-    width: 45px; 
-    transition: all 0.2s ease; 
+.inputField button.active{
+  opacity: 1;
+  pointer-events: auto;
 }
-.taskList li:hover span{
-right:0px;
+.wrapper .todoList{
+  max-height: 250px;
+  overflow-y: auto;
+}
+.todoList li{
+  position: relative;
+  list-style: none;
+  height: 45px;
+  line-height: 45px;
+  margin-bottom: 8px;
+  background: #f2f2f2;
+  border-radius: 3px;
+  padding: 0 15px;
+  cursor: default;
+  overflow: hidden;
+}
+.todoList li .icon{
+  position: absolute;
+  right: -45px;
+  background: #e74c3c;
+  width: 45px;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 3px 3px 0;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+.todoList li:hover .icon{
+  right: 0px;
 }
 .wrapper .footer{
-    display: flex;
-    width: 100%;
-    align-items:center;
-    margin-top:20px;
-    justify-content: 20px;
-
+  display: flex;
+  width: 100%;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: space-between;
 }
 .footer button{
-    
-    border:none;
-    background-color:rgb(36, 78, 194);
-    color:whitesmoke;
-    font-weight:600;
-    font-size: 17px;
-    outline: none;
-    border-radius: 10px;
-    cursor: pointer; 
+  padding: 6px 10px;
+  border-radius: 3px;
+  border: none;
+  outline: none;
+  color: #fff;
+  font-weight: 400;
+  font-size: 16px;
+  margin-left: 5px;
+  background: #8E49E8;
+  cursor: pointer;
+  user-select: none;
+  opacity: 0.6;
+  pointer-events: none;
+  transition: all 0.3s ease;
 }
-.footer span{
+.footer button.active{
+  opacity: 1;
+  pointer-events: auto;
 }
